refactoring, make smart domain entity