@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.0.0-M2</version>
-        <relativePath/>
+        <relativePath></relativePath>
     </parent>
 
     <groupId>it.petrovich</groupId>
@@ -15,28 +14,14 @@
     <version>1.0</version>
     <packaging>pom</packaging>
 
-    <repositories>
-        <repository>
-            <id>repository.spring.milestone</id>
-            <name>Spring Milestone Repository</name>
-            <url>https://repo.spring.io/milestone</url>
-        </repository>
-        <repository>
-            <id>repository.spring.snapshot</id>
-            <name>Spring Snapshot Repository</name>
-            <url>https://repo.spring.io/snapshot</url>
-        </repository>
-    </repositories>
-
     <modules>
         <module>checkstyle-tools</module>
-        <module>rss-common</module>
+        <module>rss-domain</module>
         <module>rss-logging</module>
         <module>rss-notification-core</module>
         <module>rss-notification-provider</module>
         <module>rss-notification-telegram</module>
         <module>rss-processor</module>
-        <module>rss-requester</module>
         <module>rss-storage</module>
         <module>rss-validation</module>
         <module>rss-xml</module>
@@ -57,6 +42,7 @@
         <jaxb.runtime.version>3.0.2</jaxb.runtime.version>
         <jaxb2-maven-plugin.version>3.0.0</jaxb2-maven-plugin.version>
         <jsoup.version>1.14.3</jsoup.version>
+        <logback.version>1.2.11</logback.version>
         <logstash-encoder.version>7.0.1</logstash-encoder.version>
         <lombok.version>1.18.22</lombok.version>
         <maven.checkstyle.plugin.version>3.1.2</maven.checkstyle.plugin.version>
@@ -64,7 +50,6 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <puppycrawl.version>9.1</puppycrawl.version>
         <slf4j.version>1.7.36</slf4j.version>
-        <logback.version>1.2.11</logback.version>
         <spring.boot.version>3.0.0-M2</spring.boot.version>
         <telegram.bots.version>5.7.1</telegram.bots.version>
         <webflux.version>2.6.5</webflux.version>
@@ -82,6 +67,19 @@
             <version>${lombok.version}</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>repository.spring.milestone</id>
+            <name>Spring Milestone Repository</name>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
+        <repository>
+            <id>repository.spring.snapshot</id>
+            <name>Spring Snapshot Repository</name>
+            <url>https://repo.spring.io/snapshot</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
@@ -116,17 +114,6 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <compilerArgs>
-                        <compilerArg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</compilerArg>
-                        <compilerArg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</compilerArg>
-                        <compilerArg>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</compilerArg>
-                        <compilerArg>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</compilerArg>
-                        <compilerArg>--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED</compilerArg>
-                        <compilerArg>--add-opens=java.base/java.lang=ALL-UNNAMED</compilerArg>
-                        <compilerArg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</compilerArg>
-                        <compilerArg>--add-opens=java.base/java.io=ALL-UNNAMED</compilerArg>
-                        <compilerArg>--add-opens=java.base/java.util=ALL-UNNAMED</compilerArg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -153,18 +140,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
-                        --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                        --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-                        --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-                        --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
-                        --add-opens=java.base/java.lang=ALL-UNNAMED
-                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-                        --add-opens=java.base/java.io=ALL-UNNAMED
-                        --add-opens=java.base/java.util=ALL-UNNAMED
-                    </argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
